deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finflow-transaction-platform
spec:
  selector:
    app: finflow-transaction-platform
  ports:
    - port: 80
      targetPort: 8080
